# codewars

./: .gitignore  README.md  pyproject.toml
6 kyu/: multiples_of_3_or_5.py
7 kyu/: disemvowel_trolls.py  vowel_count.py
8 kyu/: beginner_series_2_clock.py  even_or_odd.py  invert_values.py  keep_hydrated.py  powers_of_2.py  reduce_but_grow.py  string_repeat.py  third_angle_or_triangle.py
