[tool.poetry]
name = "codewars"
version = "0.1.0"
description = ""
authors = ["David <golifox@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
black = "^22.12.0"
ruff = "^0.0.231"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.black]
line-lenght = 79